kubernetes/operationcode_backend/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: operationcode-backend
spec:
  rules:
  - host: api.operationcode.org
    http:
      paths:
      - backend:
          serviceName: operationcode-backend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - api.operationcode.org
    secretName: operationcode-backend-tls
